src/main/kotlin/com/example/yourssu/error/NotFoundException.kt
package com.example.yourssu.error

open class NotFoundException(override val message: String) : RuntimeException()
